--- a/package.json
+++ b/package.json
@@ -9,11 +9,17 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@rnmapbox/maps": "^10.2.7",
     "expo": "~54.0.25",
+    "expo-build-properties": "~1.0.9",
+    "expo-dev-client": "~6.0.18",
+    "expo-location": "~19.0.7",
+    "expo-maps": "~0.12.8",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-maps": "1.20.1",
     "react-native-web": "~0.21.0"
   },
   "private": true
