--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@rnmapbox/maps": "^10.2.7",
+    "@rnmapbox/maps": "^10.2.8",
     "expo": "~54.0.25",
     "expo-build-properties": "~1.0.9",
     "expo-dev-client": "~6.0.18",
@@ -20,6 +20,7 @@
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-maps": "1.20.1",
+    "react-native-safe-area-context": "^5.6.2",
     "react-native-web": "~0.21.0"
   },
   "private": true
