--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "expo-location": "~19.0.8",
     "expo-maps": "~0.12.8",
     "expo-status-bar": "~3.0.8",
+    "geolib": "^3.3.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
